src/test/ui/borrowck/borrowck-vec-pattern-tail-element-loan.stderr
error[E0515]: cannot return value referencing local variable `vec`
  --> $DIR/borrowck-vec-pattern-tail-element-loan.rs:10:5
   |
LL |     let vec: &[isize] = &vec;
   |                         ---- `vec` is borrowed here
...
LL |     tail
   |     ^^^^ returns a value referencing data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
